# backend

./: .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  asgi.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test.sh
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 1b3a6c9000d6_insert_commons_datas.py  1cad6dda36bb_insert_master_data.py  450ab444d248_create_initial_project_tables.py  4640c9b0ca5a_insert_master_data_for_app.py  4a61cd0f745c_update_models_based_on_frontend_feedback.py  6abb5ade1ce0_insert_master_data.py  6f75a492df56_initial_migration_with_all_models.py  7efcdc1c4efa_initialize_models.py  913d077c8061_user_error_fix.py  99060f2ae92c_create_initial_project_tables.py  a1d8fa6a1d8a_create_initial_tables.py  e501a0a11a86_initial_migration.py  e508302174d3_initial_models.py  f34cdecba708_create_final_initial_models.py
app/: main.py
app/core/: config.py  database.py  security.py
app/crud/: bookmark_crud.py  comment_crud.py  recruiting_crud.py
app/exceptions/: exceptions.py
app/models/: __init__.py  base_model.py  bookmark.py  bookmark_model.py  common.py  common_model.py  recruiting.py  recruiting_model.py  user.py  user_model.py
app/schemas/: bookmark_schema.py  comment_schema.py  common.py  enums.py  frozen_config.py  image_upload_schema.py  master_data.py  master_data_schema.py  profile.py  recruiting_schema.py  token.py  user.py
app/services/: auth_service.py  master_data.py  (+7 more)
init-db/: init-extensions.sql
nginx/: nginx.conf
postgres/: Dockerfile
(+15 files in other folders)
