[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["00475-AEDF-52510-2 <d050586458@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
sqlmodel = "^0.0.24"
python-dotenv = "^1.1.1"
alembic = "^1.16.4"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = "^1.7.4"
pydantic-settings = "^2.10.1"
psycopg = {extras = ["binary", "pool"], version = "^3.2.9"}
python-multipart = "^0.0.20"
bcrypt = "<4.1.0"
boto3 = "^1.40.16"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.7"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
